Altera a media por soma

--- a/Aula 4 - Pandas e Seaborn (pós-aula).ipynb
+++ b/Aula 4 - Pandas e Seaborn (pós-aula).ipynb
@@ -50,9 +50,9 @@
     }
    ],
    "source": [
-    "world_happiness[world_happiness['year'] == 2020]['Life Ladder'].mean()\n",
+    "world_happiness[world_happiness['year'] == 2020]['Life Ladder'].sum()\n",
     "world_happiness_2021 = pd.read_csv('../datasets/world-happiness-report-2021.csv')\n",
-    "world_happiness_2021['Ladder score'].mean()"
+    "world_happiness_2021['Ladder score'].sum()"
    ]
   },
   {
